--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,21 @@ a {
   box-sizing: border-box;
 }
 
+.sliderimage {
+  width: 100%;
+  content: '';
+  /* display: block; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(
+    to right,
+    rgb(6, 6, 6) 0%,
+    rgba(255, 255, 255, 0) 69%
+  );
+  height: 100%;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
